# Youtube_video_summarizer

./: .dockerignore  .gitignore  README.md  compose.redis.yaml  compose.yaml  dump.rdb  example.env  main.py  pyproject.toml  server.Dockerfile  start_local.sh  stop_local.sh  worker.Dockerfile
src/application/: dto.py  logging_config.py  mappers.py  task_maintenance.py  task_queue.py  use_case.py  video_pipeline_service.py
src/background/: celery_app.py  celery_task.py
src/domain/: entities.py  model_exceptions.py  video_repository.py
src/infrastructure/: correction_service.py  mongo_service.py  redis_client.py  stt_service.py  summarizer_service.py  system_config.py  video_repository_imp.py  yt_service.py
src/infrastructure/database/: connection.py  mongo_service.py
src/presentation/: container.py  routes.py
